--- a/mp.essentials.csproj
+++ b/mp.essentials.csproj
@@ -34,6 +34,26 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>deploy\mp.essentials\nodes\plugins\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>deploy\mp.essentials\nodes\plugins\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Cyotek.Windows.Forms.ColorPicker, Version=1.0.0.0, Culture=neutral, PublicKeyToken=58daa28b0b2de221, processorArchitecture=MSIL">
       <HintPath>packages\Cyotek.Windows.Forms.ColorPicker.1.7.2\lib\net35\Cyotek.Windows.Forms.ColorPicker.dll</HintPath>
@@ -59,11 +79,11 @@
     <Reference Include="LzmaSharp">
       <HintPath>dlls\LzmaSharp.dll</HintPath>
     </Reference>
-    <Reference Include="md.stdl, Version=0.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\md-stdl.0.2.3-beta\lib\Net47\md.stdl.dll</HintPath>
+    <Reference Include="md.stdl, Version=999.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.999.0.0\lib\net47\md.stdl.dll</HintPath>
     </Reference>
-    <Reference Include="mp.pddn, Version=1.1.33.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\mp.pddn.1.1.33\lib\net47\mp.pddn.dll</HintPath>
+    <Reference Include="mp.pddn, Version=999.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\mp.pddn.999.0.0\lib\net47\mp.pddn.dll</HintPath>
     </Reference>
     <Reference Include="MsgPack, Version=1.0.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
       <HintPath>packages\MsgPack.Cli.1.0.0\lib\net46\MsgPack.dll</HintPath>
@@ -71,8 +91,8 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="PowerArgs, Version=3.0.0.0, Culture=neutral, PublicKeyToken=26a276264bbd55b8, processorArchitecture=MSIL">
-      <HintPath>packages\PowerArgs.3.0.0\lib\netstandard2.0\PowerArgs.dll</HintPath>
+    <Reference Include="PowerArgs, Version=2.8.1.0, Culture=neutral, PublicKeyToken=26a276264bbd55b8, processorArchitecture=MSIL">
+      <HintPath>packages\PowerArgs.2.8.1.0\lib\net45\PowerArgs.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -140,9 +160,13 @@
       <HintPath>dlls\vvvvlib\System.Reflection.Context.CodePlex.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Runtime.CompilerServices.Unsafe.4.5.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Security" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -211,12 +235,14 @@
     <Compile Include="generic\GenericAsObjectNode.cs" />
     <Compile Include="generic\GenericDictionaryNode.cs" />
     <Compile Include="generic\GenericKeepLastNode.cs" />
+    <Compile Include="generic\NonGenericZip.cs" />
     <Compile Include="generic\GenericZip.cs" />
     <Compile Include="generic\KeepTemporary.cs" />
     <Compile Include="generic\NodeEvaluateNode.cs" />
     <Compile Include="generic\ObjectUtils.cs" />
     <Compile Include="generic\ManualGenericQueue.cs" />
     <Compile Include="generic\TupleNodes.cs" />
+    <Compile Include="generic\XamlNodes.cs" />
     <Compile Include="graphs\AbstractGraphGeneratorNode.cs" />
     <Compile Include="graphs\Neighbours.cs" />
     <Compile Include="graphs\Dijkstra.cs" />
@@ -225,6 +251,8 @@
     <Compile Include="graphs\FRLayoutNode.cs" />
     <Compile Include="messages\MessagePathExtensions.cs" />
     <Compile Include="messages\MessagePathNode.cs" />
+    <Compile Include="network\http\HttpDirectoryServer.cs" />
+    <Compile Include="network\http\HttpDirServerNode.cs" />
     <Compile Include="network\YoutubeDownloader.cs" />
     <Compile Include="network\http\ClientConstructNodes.cs" />
     <Compile Include="network\http\ClientSendNodes.cs" />
@@ -265,6 +293,7 @@
     <Compile Include="string\BinStringFindNode.cs" />
     <Compile Include="string\ControlDragAndDropNode.cs" />
     <Compile Include="string\FixStringClipboardNode.cs" />
+    <Compile Include="string\NodeStringFormatNode.cs" />
     <Compile Include="string\StatesStateServerNode.cs" />
     <Compile Include="string\StringAddHeadCutTailNode.cs" />
     <Compile Include="string\StringDistanceNodes.cs" />
@@ -325,21 +354,15 @@
     <Content Include="blank.cur">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="vJoyInterface.dll">
+    <EmbeddedResource Include="vJoyInterface.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="reogrid\NumberGrid.resx">
       <DependentUpon>NumberGrid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
