--- a/packages.config
+++ b/packages.config
@@ -4,11 +4,11 @@
   <package id="EPPlus" version="4.1.1" targetFramework="net47" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net47" />
-  <package id="md-stdl" version="0.2.3-beta" targetFramework="net47" />
-  <package id="mp.pddn" version="1.1.33" targetFramework="net47" />
+  <package id="md-stdl" version="999.0.0" targetFramework="net47" />
+  <package id="mp.pddn" version="999.0.0" targetFramework="net47" />
   <package id="MsgPack.Cli" version="1.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
-  <package id="PowerArgs" version="3.0.0" targetFramework="net47" />
+  <package id="PowerArgs" version="2.8.1.0" targetFramework="net47" />
   <package id="SharpCompress" version="0.21.1" targetFramework="net47" />
   <package id="SharpDX" version="4.0.1" targetFramework="net461" />
   <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net461" />
@@ -21,6 +21,7 @@
   <package id="System.Reactive.Interfaces" version="4.0.0" targetFramework="net47" />
   <package id="System.Reactive.Linq" version="4.0.0" targetFramework="net47" />
   <package id="System.Reactive.PlatformServices" version="4.0.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net47" />
   <package id="unvell.ReoGrid.dll" version="2.1.0.0" targetFramework="net47" />
   <package id="xxHash.NET" version="1.0.2" targetFramework="net461" />
 </packages>
