--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AudioSwitcher.AudioApi" version="4.0.0-alpha5" targetFramework="net47" />
+  <package id="AudioSwitcher.AudioApi.CoreAudio" version="4.0.0-alpha5" targetFramework="net47" />
   <package id="Cyotek.Windows.Forms.ColorPicker" version="1.7.2" targetFramework="net47" />
   <package id="EPPlus" version="4.1.1" targetFramework="net47" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
+  <package id="fasterflect" version="2.1.3" targetFramework="net47" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net47" />
-  <package id="md-stdl" version="0.3.2" targetFramework="net47" />
-  <package id="mp.pddn" version="1.2.0" targetFramework="net47" />
+  <package id="md-stdl" version="0.3.5" targetFramework="net47" />
+  <package id="mp.pddn" version="1.3.0" targetFramework="net47" />
   <package id="MsgPack.Cli" version="1.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="PowerArgs" version="2.8.1.0" targetFramework="net47" />
@@ -14,7 +17,6 @@
   <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net461" />
   <package id="SharpMessage" version="2.9.10" targetFramework="net461" />
   <package id="SimMetrics.Net" version="1.0.4" targetFramework="net461" />
-  <package id="System.Interactive" version="3.1.1" targetFramework="net47" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net47" />
   <package id="System.Reactive.Core" version="4.0.0" targetFramework="net47" />
