--- a/packages.config
+++ b/packages.config
@@ -7,8 +7,8 @@
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
   <package id="fasterflect" version="2.1.3" targetFramework="net47" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net47" />
-  <package id="md-stdl" version="0.3.5" targetFramework="net47" />
-  <package id="mp.pddn" version="1.3.0" targetFramework="net47" />
+  <package id="md-stdl" version="1.0.7" targetFramework="net47" />
+  <package id="mp.pddn" version="1.3.2" targetFramework="net47" />
   <package id="MsgPack.Cli" version="1.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="PowerArgs" version="2.8.1.0" targetFramework="net47" />
@@ -16,14 +16,23 @@
   <package id="SharpDX" version="4.0.1" targetFramework="net461" />
   <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net461" />
   <package id="SharpMessage" version="2.9.10" targetFramework="net461" />
-  <package id="SimMetrics.Net" version="1.0.4" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
+  <package id="SimMetrics.Net" version="1.0.5" targetFramework="net47" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net47" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net47" />
   <package id="System.Reactive.Core" version="4.0.0" targetFramework="net47" />
   <package id="System.Reactive.Interfaces" version="4.0.0" targetFramework="net47" />
   <package id="System.Reactive.Linq" version="4.0.0" targetFramework="net47" />
   <package id="System.Reactive.PlatformServices" version="4.0.0" targetFramework="net47" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net47" />
   <package id="unvell.ReoGrid.dll" version="2.1.0.0" targetFramework="net47" />
+  <package id="VVVV.Core" version="38.1.0" targetFramework="net47" />
+  <package id="VVVV.Hosting" version="38.1.0" targetFramework="net47" />
+  <package id="VVVV.Nodes.Generic" version="38.1.0" targetFramework="net47" />
+  <package id="VVVV.PluginInterfaces" version="38.1.0" targetFramework="net47" />
+  <package id="VVVV.SlimDX" version="1.0.2" targetFramework="net47" />
+  <package id="VVVV.System.ComponentModel.Composition.Codeplex" version="2.5.0" targetFramework="net47" />
+  <package id="VVVV.Utils" version="38.1.0" targetFramework="net47" />
+  <package id="VVVV.Utils3rdParty" version="38.1.0" targetFramework="net47" />
+  <package id="VVVV.UtilsIL" version="38.1.0" targetFramework="net47" />
   <package id="xxHash.NET" version="1.0.2" targetFramework="net461" />
+  <package id="YamlDotNet" version="5.3.0" targetFramework="net47" />
 </packages>
